--- a/doc-process-app/package.json
+++ b/doc-process-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.19.2",
     "pdfjs-dist": "^3.4.120",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
